# mina

./: README.md
frontend/wallet/tablecloth/bs/src/: tablecloth.ml  tablecloth.mli
src/lib/marlin/zexe/: .bazelignore  .bazelrc  .gitignore  Cargo.toml  README.md  WORKSPACE.bazel  WORKSPACE.bzl
src/lib/marlin/zexe/.circleci/: config.yml
src/lib/marlin/zexe/algebra/: BUILD.bazel  Cargo.toml
src/lib/marlin/zexe/algebra-benches/: BUILD.bazel
src/lib/marlin/zexe/algebra-core/: BUILD.bazel  Cargo.toml
src/lib/marlin/zexe/algebra-core/algebra-core-derive/: BUILD.bazel
src/lib/marlin/zexe/algebra-core/field-assembly/: BUILD.bazel
src/lib/marlin/zexe/algebra-core/mince/: BUILD.bazel
src/lib/marlin/zexe/algebra-core/src/biginteger/: macros.rs
src/lib/marlin/zexe/algebra-core/src/curves/models/: short_weierstrass_jacobian.rs
src/lib/marlin/zexe/algebra-core/src/fields/: macros.rs
src/lib/marlin/zexe/algebra-core/src/fields/models/: fp2.rs
src/lib/marlin/zexe/algebra/src/: lib.rs
src/lib/marlin/zexe/bench-utils/: BUILD.bazel
src/lib/marlin/zexe/bzl/cargo/: BUILD.bazel  Cargo.toml  crates.bzl
src/lib/marlin/zexe/bzl/cargo/remote/: BUILD.alga-0.9.3.bazel  BUILD.approx-0.3.2.bazel  BUILD.autocfg-0.1.7.bazel  BUILD.bitflags-1.2.1.bazel  BUILD.blake2-0.8.1.bazel  BUILD.bstr-0.2.14.bazel  BUILD.bumpalo-3.4.0.bazel  BUILD.byte-tools-0.3.1.bazel  BUILD.byteorder-1.3.4.bazel  BUILD.cast-0.2.3.bazel  BUILD.clap-2.33.3.bazel  BUILD.colored-2.0.0.bazel  BUILD.criterion-0.3.3.bazel  BUILD.criterion-plot-0.4.3.bazel  BUILD.crossbeam-deque-0.8.0.bazel  BUILD.crypto-mac-0.7.0.bazel  BUILD.csv-1.1.5.bazel  BUILD.csv-core-0.1.10.bazel  BUILD.derivative-2.1.1.bazel  BUILD.digest-0.8.1.bazel  BUILD.endian-type-0.1.2.bazel  BUILD.generic-array-0.12.3.bazel  BUILD.half-1.6.0.bazel  BUILD.itertools-0.9.0.bazel  BUILD.itoa-0.4.6.bazel  BUILD.js-sys-0.3.39.bazel  BUILD.log-0.4.11.bazel  BUILD.memchr-2.3.4.bazel  BUILD.ndarray-0.13.1.bazel  BUILD.nibble_vec-0.0.4.bazel  BUILD.num-bigint-0.2.3.bazel  BUILD.num-complex-0.2.4.bazel  BUILD.num-integer-0.1.44.bazel  BUILD.num-traits-0.1.43.bazel  BUILD.num-traits-0.2.11.bazel  BUILD.ocaml-derive-0.19.0.bazel  BUILD.ocaml-sys-0.19.0.bazel  BUILD.oorandom-11.1.3.bazel  BUILD.opaque-debug-0.2.3.bazel  BUILD.paste-0.1.18.bazel  (+40 more)
src/lib/marlin/zexe/bzl/config/rust/: BUILD.bazel  BUILD.bzl
src/lib/marlin/zexe/bzl/tools/: wss
src/lib/marlin/zexe/crypto-primitives/: BUILD.bazel
src/lib/marlin/zexe/crypto-primitives/src/crh/pedersen/: constraints.rs
src/lib/marlin/zexe/dpc/: BUILD.bazel
src/lib/marlin/zexe/ff-fft/: BUILD.bazel
src/lib/marlin/zexe/ff-fft/src/: evaluations.rs
src/lib/marlin/zexe/gm17/: BUILD.bazel
src/lib/marlin/zexe/gm17/src/: r1cs_to_sap.rs
src/lib/marlin/zexe/groth16/: BUILD.bazel
src/lib/marlin/zexe/r1cs-core/: BUILD.bazel
src/lib/marlin/zexe/r1cs-std/: BUILD.bazel
