workspace( name = "zexe" )

load("//:WORKSPACE.bzl", "rust_fetch_rules")
rust_fetch_rules()

load("@io_bazel_rules_rust//rust:repositories.bzl",
     "rust_repositories", "rust_repository_set")
rust_repositories(version = "1.47.0", edition="2018")

load("@io_bazel_rules_rust//:workspace.bzl", "bazel_version")
bazel_version(name = "bazel_version")

load("//bzl/cargo:crates.bzl", "zexe_fetch_remote_crates")
zexe_fetch_remote_crates()

