load(
    "@io_bazel_rules_rust//rust:rust.bzl",
    "rust_library",
    "rust_binary",
    "rust_test",
)

load("@io_bazel_rules_rust//bzl/cargo:cargo_build_script.bzl", "cargo_build_script")

cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    deps = ["//bzl/cargo:rustc_version"]
    # "//algebra-core/field-assembly:field_assembly"],
)

rust_library(
    name = "algebra_benches",
    visibility = ["//visibility:public"],
    edition = "2018",
    srcs = glob(["**/*.rs"]),
    deps = [
        ":build_script",
    ],
)

