load(
    "@io_bazel_rules_rust//rust:rust.bzl",
    "rust_library",
    "rust_binary",
    "rust_test",
)

load("@io_bazel_rules_rust//cargo:cargo_build_script.bzl", "cargo_build_script")
cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    deps = ["//bzl/cargo:rustc_version",
            "//algebra-core/field-assembly:field-assembly"],
)

rust_library(
    name = "algebra-core",
    visibility = ["//visibility:public"],
    edition = "2018",
    srcs = glob(["**/*.rs"]),
    proc_macro_deps = [
        "//algebra-core/algebra-core-derive",
        "//bzl/cargo:derivative",
        "//bzl/cargo:unroll",
    ],
    deps = [
        ":build_script",
        "//algebra-core/field-assembly:field-assembly",
        "//bzl/cargo:num_traits",
        "//bzl/cargo:ocaml",
        "//bzl/cargo:rand",
        "//bzl/cargo:rayon",
    ],
    crate_features = [
        "std",
        "derive",
        "parallel",
        "rayon",
        "ocaml_types",
        "llvm_asm",
    ],
)
