load("@io_bazel_rules_rust//rust:rust.bzl", "rust_library")

rust_library(
    name = "r1cs-core",
    edition = "2018",
    visibility = ["//visibility:public"],
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "//algebra-core",
        "//bzl/cargo:smallvec",
    ],
    crate_features = [
        "std",
        "parallel"
    ]
)
