load(
    "@io_bazel_rules_rust//rust:rust.bzl",
    "rust_library",
)

rust_library(
    name = "algebra-core-derive",
    visibility = ["//visibility:public"],
    crate_type = "proc-macro",
    edition = "2018",
    srcs = glob(["**/*.rs"]),
    deps = [
        "//bzl/cargo:proc_macro2",
        "//bzl/cargo:syn",
        "//bzl/cargo:quote",
    ],
)

