load(
    "@io_bazel_rules_rust//rust:rust.bzl",
    "rust_library",
    "rust_binary",
    "rust_test",
)

rust_library(
    name = "mince",
    visibility = ["//visibility:public"],
    crate_type = "proc-macro",
    srcs = glob(["**/*.rs"]),
    deps = [
        "//bzl/cargo:quote",
        "//bzl/cargo:syn",
    ],
)

