[workspace]

[package]
name = "zexe"
version = "0.1.0"

[dependencies]
blake2 = { version = "0.8.1", default-features = false }
colored = "2.0.0"
criterion = "0.3.1"
csv = "1"
derivative = { version = "= 2.1.1", features = ["use_core"] }
digest = "0.8"
libc = "0.2.0"
num-bigint = { version = "= 0.2.3" }
num-traits = { version = "= 0.2.11", default-features = false }
ocaml = { version = "0.19.0", features = ["without-ocamlopt"] }
ocaml-derive = { version = "0.19.0" }
ocaml-sys = { version = "0.19.0", features = ["without-ocamlopt"]}
paste = "0.1"
proc-macro2 = "= 1.0.17"
quote = "= 1.0.6"
rand = "= 0.7.0"  # 0.7.3 to match marlin?
rand_core = "0.5"
radix_trie = "0.1"
rand_xorshift = "0.2"
rayon = "= 1.3.1"
rustc_version = "= 0.2.3"
smallvec = "1.2"
sprs = "0.7.1"
syn = {version = "= 1.0.17", features = ["full"]}
typenum = "= 1.12.0"
unroll = "= 0.1.4"

[lib]
path = "fake_lib.rs"  # Mandatory (or Cargo tooling is unhappy)

[package.metadata.raze]
workspace_path = "//bzl/cargo"
genmode = "Remote"
targets = ["x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
output_buildfile_suffix = "BUILD.bazel"
default_gen_buildrs = true

[package.metadata.raze.crates.ocaml-sys.'0.19.0']
additional_env = {"OCAMLOPT"= "ocamlopt"}

[package.metadata.raze.crates.typenum.'1.12.0']
gen_buildrs = true
# https://github.com/google/cargo-raze/issues/138
additional_flags = ["--cfg=feature=\\\"force_unix_path_separator\\\""]
